specs/022-async-await/examples/invalid/settimeout-arg-count.ts
// setTimeout requires exactly a callback and a delay.

function tick(): void {
  console.log(1);
}

setTimeout(tick);
